# ps2keyboard-esp32c3

./: .gitdpod.Dockerfile  Cargo.toml  README.md
.cargo/: config.toml
docs/: README.md
examples/: embassy_keyboard_to_serial.rs  keyboard_to_serial.rs
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
