[package]
name = "ps2keyboard"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.13.0" }
esp-println = { version = "0.7.1", features = [ "esp32c3", "uart", "log" ] }
esp-backtrace = { version = "0.9.0", features = [ "esp32c3", "print-uart", "panic-handler" ] }
pc-keyboard = "0.7.0"
critical-section = "1.1.1"
log = "0.4.14"
# bincode = { version = "1.3.3", default-features = false, features = [ "bincode_derive" ] }
# bincode = { git = "https://github.com/bincode-org/bincode.git", rev = "ff7a45a", default-features = false, features = [ "derive" ] }

