[package]
name = "ps2keyboard"
version = "0.2.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
#hal = { package = "esp32c3-hal", version = "0.14.0" }
hal = { package = "esp32c3-hal", version = "0.14.0" , features = ["embassy", "async", "embassy-time-timg0", "rt", "embassy-executor-thread"] }
#hal = { package = "esp32c3-hal", version = "0.14.0" }
esp-println = { version = "0.7.1", features = [ "esp32c3", "uart", "log" ] }
esp-backtrace = { version = "0.9.0", features = [ "esp32c3", "print-uart", "panic-handler" ] }
pc-keyboard = "0.7.0"
critical-section = "1.1.1"
log = "0.4.14"
# bincode = { version = "1.3.3", default-features = false, features = [ "bincode_derive" ] }
# bincode = { git = "https://github.com/bincode-org/bincode.git", rev = "ff7a45a", default-features = false, features = [ "derive" ] }

embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }
#embassy-net = { version = "0.2.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-executor = { version = "0.4.0", package = "embassy-executor", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.2.0" }
static_cell = { version = "2.0.0", features = ["nightly"] }
