[package]
name = "ps2keyboard"
version = "0.2.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# Common dependencies
[dependencies]
hal = { package = "esp32c3-hal", version = "0.14.0", optional = true }
esp-println = { version = "0.7.1", features = ["esp32c3", "uart", "log"] }
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "print-uart", "panic-handler"] }
pc-keyboard = "0.7.0"
critical-section = "1.1.1"
log = "0.4.14"

# Async dependencies
embedded-hal-async = { version = "=1.0.0-rc.2", optional = true }
embassy-sync = { version = "0.5.0",optional = true }
embassy-futures = { version = "0.1.0", optional = true }
embassy-executor = { version = "0.4.0", package = "embassy-executor", features = ["nightly", "integrated-timers"], optional = true }
embassy-time = { version = "0.2.0", optional = true }

# Features
[features]
default = [ "hal" ]
embassy = [ "hal/embassy", "hal/async", "hal/embassy-time-timg0", "hal/rt", "hal/embassy-executor-thread", "embedded-hal-async", "embassy-sync", "embassy-futures", "embassy-executor", "embassy-time" ]

# Examples configuration
[[example]]
name = "keyboard_to_serial"

[[example]]
name = "embassy_keyboard_to_serial"
required-features = ["embassy"]
